[metadata]
name = rab-jmishler
version = attr: rab.__version__
author = Jonathan Mishler
author_email = jonathan.mishler@gmail.com
description = A package to access the aircraft registered aircraft in Brazil
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy 
    pandas
    banana-grabber-jmishler @ https://github.com/jonathanmishler/banana_grabber/archive/master.zip
python_requires = >=3.6